--- a/stm32_freertos.ioc
+++ b/stm32_freertos.ioc
@@ -23,15 +23,16 @@ Mcu.IP3=USB_OTG_FS
 Mcu.IPNb=4
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PH0 - OSC_IN
-Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
-Mcu.PinsNb=8
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PH0 - OSC_IN
+Mcu.Pin2=PH1 - OSC_OUT
+Mcu.Pin3=PA11
+Mcu.Pin4=PA12
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
+Mcu.PinsNb=9
 Mcu.ThirdParty0=AL94.I-CUBE-USBD-COMPOSITE.1.0.3
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -58,6 +59,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIO_Label=LED
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
