--- a/stm32_freertos.ioc
+++ b/stm32_freertos.ioc
@@ -30,7 +30,7 @@ Mcu.Pin3=PA11
 Mcu.Pin4=PA12
 Mcu.Pin5=PA13
 Mcu.Pin6=PA14
-Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin7=VP_SYS_VS_tim10
 Mcu.Pin8=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
 Mcu.PinsNb=9
 Mcu.ThirdParty0=AL94.I-CUBE-USBD-COMPOSITE.1.0.3
@@ -50,6 +50,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
+NVIC.TimeBase=TIM1_UP_TIM10_IRQn
+NVIC.TimeBaseIP=TIM10
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -133,6 +136,6 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3.Mode=USBJjComposite
 VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3.Signal=AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim10.Mode=TIM10
+VP_SYS_VS_tim10.Signal=SYS_VS_tim10
 board=custom
